# platform/core-service/src/main/java/cl/duoc/xyzbank/coreservice/accounts/infrastructure/persistence/CustomerJpaEntity.java
@@ -1,43 +1,0 @@
-package cl.duoc.xyzbank.coreservice.accounts.infrastructure.persistence;
-
-import jakarta.persistence.Column;
-import jakarta.persistence.Entity;
-import jakarta.persistence.Id;
-import jakarta.persistence.Table;
-
-import java.util.UUID;
-
-@Entity
-@Table(name = "customers")
-public class CustomerJpaEntity {
-
-    @Id
-    private UUID id;
-
-    @Column(name = "full_name", nullable = false)
-    private String fullName;
-
-    @Column(nullable = false)
-    private String email;
-
-    protected CustomerJpaEntity() {
-    }
-
-    public CustomerJpaEntity(UUID id, String fullName, String email) {
-        this.id = id;
-        this.fullName = fullName;
-        this.email = email;
-    }
-
-    public UUID getId() {
-        return id;
-    }
-
-    public String getFullName() {
-        return fullName;
-    }
-
-    public String getEmail() {
-        return email;
-    }
-}
